# TextFiltering

./: CMakeLists.txt  README.md
src/: BaseFilter.h  CensorFilter.cpp  CensorFilter.h  UppercaseFilter.cpp  UppercaseFilter.h  main.cpp
tests/: censorship_tests.cpp  uppercase_tests.cpp
